k8s/base/services/fdroid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdroid
  namespace: fdroid
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: forward-auth-forwardauth@kubernetescrd
spec:
  rules:
    - host: fdroid.lffl.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fdroid
                port:
                  number: 80
